--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nightwatch-clear",
+  "name": "nightwatch-clairvoyance",
   "version": "1.0.0",
-  "description": "Concept project for Nightwatch page object autocompletion",
+  "description": "🔮 Magical autocompletion/intellisense for Nightwatch Page Objects and API",
   "main": "index.js",
   "scripts": {
     "test": "nightwatch"
@@ -9,10 +9,11 @@
   "author": "Dimitri Harding <https://github.com/dimitriharding>",
   "license": "ISC",
   "dependencies": {
-    "chromedriver": "^85.0.1",
-    "nightwatch": "^1.4.2"
+    "@types/nightwatch": "^1.3.0",
+    "extract-comments": "^1.1.0"
   },
   "devDependencies": {
-    "@types/nightwatch": "^1.3.0"
+    "chromedriver": "^85.0.1",
+    "nightwatch": "^1.4.2"
   }
 }
