--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "Dimitri Harding <https://github.com/dimitriharding>",
   "license": "ISC",
   "dependencies": {
-    "@types/nightwatch": "^1.3.0",
-    "extract-comments": "^1.1.0"
+    "@types/nightwatch": "^1.3.0"
   },
   "devDependencies": {
     "chromedriver": "^85.0.1",
